# rust-salary-parser-jp

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: parse_salary.rs
src/: error.rs  extract.rs  lib.rs  normalize.rs
tests/: parse.rs
